<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Physics Solver2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_pendulum">PendulumActivity</string>
    <string name="pendulum_pic">Pendulum Pic</string>
    <string name="sort_by_topic">Sort by Topic</string>
    <string name="sort_by_chapter">Sort by Chapter</string>
    <string name="pendulum">Pendulum</string>
    <string name="arrow">Arrow</string>
    <string name="elastic_collisions">Elastic Collisions</string>
    <string name="heading_3">Heading 3</string>
    <string name="t">T</string>
    <string name="l">L</string>
    <string name="g">g</string>
    <string name="solve_for_">Solve for:</string>
    <string name="_">=></string>
    <string name="g_">g=</string>
    <string name="t_">T=</string>
    <string name="l_">L=</string>

</resources>
