<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >
<TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >
                
                <TextView
                    android:layout_width="156dp"
                    android:layout_height="match_parent"
                    android:background="#00ccff"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/sort_by_topic"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" >

                </TextView>
                
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#bbbbbb"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/sort_by_chapter"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" >

                </TextView>
                
            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <ScrollView
                    android:id="@+id/listView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                    
                    
                    <LinearLayout
			            android:layout_width="match_parent"
			            android:layout_height="wrap_content"
			            android:orientation="vertical" >
			            
	                    <RelativeLayout
	                        android:layout_width="match_parent"
	                        android:layout_height="35dp"
	                        android:background="@drawable/customborder"
	                        android:clickable="true"
	                        android:gravity="right"
	                        android:onClick="pendulumClick"
	                        android:orientation="horizontal" >

	                        <TextView
	                            android:layout_width="match_parent"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
	                            android:gravity="center_vertical"
	                            android:text="@string/pendulum"
	                            android:textColor="#000000"
	                            android:textSize="20sp" >
	                            
	                        </TextView>

	                        <ImageView
	                            android:layout_width="38dp"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
       							android:layout_alignParentRight="true"
	                            android:contentDescription="@string/arrow"
	                            android:scaleType="centerInside"
	                            android:src="@drawable/arrowicon" >
	                            
	                        </ImageView>
	                    </RelativeLayout>
			            
	                    <RelativeLayout
	                        android:layout_width="match_parent"
	                        android:layout_height="35dp"
	                        android:background="@drawable/customborder"
	                        android:clickable="true"
	                        android:gravity="right"
	                        android:orientation="horizontal" >

	                        <TextView
	                            android:layout_width="match_parent"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
	                            android:gravity="center_vertical"
	                            android:text="@string/elastic_collisions"
	                            android:textColor="#000000"
	                            android:textSize="20sp" >
	                            
	                        </TextView>

	                        <ImageView
	                            android:layout_width="38dp"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
       							android:layout_alignParentRight="true"
	                            android:contentDescription="@string/arrow"
	                            android:scaleType="centerInside"
	                            android:src="@drawable/arrowicon" >
	                            
	                        </ImageView>
	                    </RelativeLayout>
			            
	                    <RelativeLayout
	                        android:layout_width="match_parent"
	                        android:layout_height="35dp"
	                        android:background="@drawable/customborder"
	                        android:clickable="true"
	                        android:gravity="right"
	                        android:orientation="horizontal" >

	                        <TextView
	                            android:layout_width="match_parent"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
	                            android:gravity="center_vertical"
	                            android:text="@string/heading_3"
	                            android:textColor="#000000"
	                            android:textSize="20sp" >
	                            
	                        </TextView>

	                        <ImageView
	                            android:layout_width="38dp"
	                            android:layout_height="match_parent"
	                            android:clickable="false"
       							android:layout_alignParentRight="true"
	                            android:contentDescription="@string/arrow"
	                            android:scaleType="centerInside"
	                            android:src="@drawable/arrowicon" >
	                            
	                        </ImageView>
	                    </RelativeLayout>
                    </LinearLayout>
	                
                </ScrollView>

                <TextView
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </TextView>

                <TextView
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >
                </TextView>
                
            </FrameLayout>
        </LinearLayout>
    </TabHost>
</RelativeLayout>
